// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spots page should render correctly with a few spots 1`] = `
<Fragment>
  <Level
    gutter="sm"
    style={
      Object {
        "backgroundColor": "var(--pf-global--BackgroundColor--200)",
        "padding": "5px 5px 5px 5px",
      }
    }
  >
    <LevelItem>
      <FilterComponent
        filterText=""
        onChange={[Function]}
      />
    </LevelItem>
    <LevelItem
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <Component
        isDisabled={false}
        onClick={[Function]}
      >
        Trans(i18nKey=add)
      </Component>
      <Component
        itemCount={2}
        onPerPageSelect={[Function]}
        onSetPage={[Function]}
        page={1}
        perPage={10}
        widgetId="pagination-options-menu-top"
      />
    </LevelItem>
  </Level>
  <Component
    caption="Spots"
    cells={
      Array [
        Object {
          "cellTransforms": Array [
            [Function],
          ],
          "props": Object {},
          "title": "Name",
          "transforms": Array [
            [Function],
          ],
        },
        Object {
          "cellTransforms": Array [
            [Function],
          ],
          "props": Object {},
          "title": "",
          "transforms": undefined,
        },
      ]
    }
    onSort={[Function]}
    rows={
      Array [
        Object {
          "cells": Array [
            Object {
              "title": <EditableComponent
                editor={
                  <ForwardRef
                    aria-label="Name"
                    defaultValue="Spot 1"
                    name="name"
                    onChange={[Function]}
                  />
                }
                isEditing={false}
                viewer={
                  <span
                    style={
                      Object {
                        "display": "grid",
                        "gridTemplateColumns": "min-content 5px max-content min-content",
                      }
                    }
                  >
                    <span />
                    <span />
                    <Text>
                      Spot 1
                    </Text>
                    <Unknown
                      onClick={[Function]}
                      variant="link"
                    >
                      <ArrowIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      />
                    </Unknown>
                  </span>
                }
              />,
            },
            Object {
              "title": <EditableComponent
                editor={
                  <StatefulMultiTypeaheadSelectInput
                    emptyText="Trans(i18nKey=selectRequiredSkills)"
                    onChange={[Function]}
                    optionToStringMap={[Function]}
                    options={
                      Array [
                        Object {
                          "name": "Skill 1",
                          "tenantId": 0,
                        },
                        Object {
                          "name": "Skill 2",
                          "tenantId": 0,
                        },
                      ]
                    }
                    value={Array []}
                  />
                }
                isEditing={false}
                viewer={
                  <ChipGroup
                    className=""
                    collapsedText="\${remaining} more"
                    defaultIsOpen={false}
                    expandedText="Show Less"
                    numChips={3}
                    withToolbar={false}
                  />
                }
              />,
            },
            Object {
              "title": <EditableComponent
                editor={
                  <StatefulTypeaheadSelectInput
                    emptyText=""
                    onChange={[Function]}
                    optionToStringMap={[Function]}
                    options={
                      Array [
                        true,
                        false,
                      ]
                    }
                    value={false}
                  />
                }
                isEditing={false}
                viewer={
                  <Text>
                    No
                  </Text>
                }
              />,
            },
            Object {
              "title": <EditableComponent
                editor={
                  <span
                    style={
                      Object {
                        "display": "grid",
                        "gridColumnGap": "5px",
                        "gridTemplateColumns": "1fr auto auto",
                      }
                    }
                  >
                    <span />
                    <Unknown
                      aria-label="Save"
                      onClick={[Function]}
                      variant="link"
                    >
                      <SaveIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      />
                    </Unknown>
                    <Unknown
                      aria-label="Cancel"
                      onClick={[Function]}
                      variant="link"
                    >
                      <CloseIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      />
                    </Unknown>
                  </span>
                }
                isEditing={false}
                viewer={
                  <span
                    style={
                      Object {
                        "display": "grid",
                        "gridColumnGap": "5px",
                        "gridTemplateColumns": "1fr auto auto",
                      }
                    }
                  >
                    <span />
                    <Unknown
                      aria-label="Edit"
                      onClick={[Function]}
                      variant="link"
                    >
                      <EditIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      />
                    </Unknown>
                    <Unknown
                      aria-label="Delete"
                      onClick={[Function]}
                      variant="link"
                    >
                      <TrashIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      />
                    </Unknown>
                  </span>
                }
              />,
            },
          ],
        },
        Object {
          "cells": Array [
            Object {
              "title": <EditableComponent
                editor={
                  <ForwardRef
                    aria-label="Name"
                    defaultValue="Spot 2"
                    name="name"
                    onChange={[Function]}
                  />
                }
                isEditing={false}
                viewer={
                  <span
                    style={
                      Object {
                        "display": "grid",
                        "gridTemplateColumns": "min-content 5px max-content min-content",
                      }
                    }
                  >
                    <BiohazardIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                      title={null}
                    />
                    <span />
                    <Text>
                      Spot 2
                    </Text>
                    <Unknown
                      onClick={[Function]}
                      variant="link"
                    >
                      <ArrowIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      />
                    </Unknown>
                  </span>
                }
              />,
            },
            Object {
              "title": <EditableComponent
                editor={
                  <StatefulMultiTypeaheadSelectInput
                    emptyText="Trans(i18nKey=selectRequiredSkills)"
                    onChange={[Function]}
                    optionToStringMap={[Function]}
                    options={
                      Array [
                        Object {
                          "name": "Skill 1",
                          "tenantId": 0,
                        },
                        Object {
                          "name": "Skill 2",
                          "tenantId": 0,
                        },
                      ]
                    }
                    value={
                      Array [
                        Object {
                          "name": "Skill 1",
                          "tenantId": 0,
                        },
                        Object {
                          "name": "Skill 2",
                          "tenantId": 0,
                        },
                      ]
                    }
                  />
                }
                isEditing={false}
                viewer={
                  <ChipGroup
                    className=""
                    collapsedText="\${remaining} more"
                    defaultIsOpen={false}
                    expandedText="Show Less"
                    numChips={3}
                    withToolbar={false}
                  >
                    <Unknown
                      isReadOnly={true}
                    >
                      Skill 1
                    </Unknown>
                    <Unknown
                      isReadOnly={true}
                    >
                      Skill 2
                    </Unknown>
                  </ChipGroup>
                }
              />,
            },
            Object {
              "title": <EditableComponent
                editor={
                  <StatefulTypeaheadSelectInput
                    emptyText=""
                    onChange={[Function]}
                    optionToStringMap={[Function]}
                    options={
                      Array [
                        true,
                        false,
                      ]
                    }
                    value={true}
                  />
                }
                isEditing={false}
                viewer={
                  <Text>
                    Yes
                  </Text>
                }
              />,
            },
            Object {
              "title": <EditableComponent
                editor={
                  <span
                    style={
                      Object {
                        "display": "grid",
                        "gridColumnGap": "5px",
                        "gridTemplateColumns": "1fr auto auto",
                      }
                    }
                  >
                    <span />
                    <Unknown
                      aria-label="Save"
                      onClick={[Function]}
                      variant="link"
                    >
                      <SaveIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      />
                    </Unknown>
                    <Unknown
                      aria-label="Cancel"
                      onClick={[Function]}
                      variant="link"
                    >
                      <CloseIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      />
                    </Unknown>
                  </span>
                }
                isEditing={false}
                viewer={
                  <span
                    style={
                      Object {
                        "display": "grid",
                        "gridColumnGap": "5px",
                        "gridTemplateColumns": "1fr auto auto",
                      }
                    }
                  >
                    <span />
                    <Unknown
                      aria-label="Edit"
                      onClick={[Function]}
                      variant="link"
                    >
                      <EditIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      />
                    </Unknown>
                    <Unknown
                      aria-label="Delete"
                      onClick={[Function]}
                      variant="link"
                    >
                      <TrashIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      />
                    </Unknown>
                  </span>
                }
              />,
            },
          ],
        },
      ]
    }
    sortBy={Object {}}
  >
    <TableHeader />
    <TableBody />
  </Component>
</Fragment>
`;

exports[`Spots page should render correctly with no spots 1`] = `
<Fragment>
  <Level
    gutter="sm"
    style={
      Object {
        "backgroundColor": "var(--pf-global--BackgroundColor--200)",
        "padding": "5px 5px 5px 5px",
      }
    }
  >
    <LevelItem>
      <FilterComponent
        filterText=""
        onChange={[Function]}
      />
    </LevelItem>
    <LevelItem
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <Component
        isDisabled={false}
        onClick={[Function]}
      >
        Trans(i18nKey=add)
      </Component>
      <Component
        itemCount={0}
        onPerPageSelect={[Function]}
        onSetPage={[Function]}
        page={1}
        perPage={10}
        widgetId="pagination-options-menu-top"
      />
    </LevelItem>
  </Level>
  <Component
    caption="Spots"
    cells={
      Array [
        Object {
          "cellTransforms": Array [
            [Function],
          ],
          "props": Object {},
          "title": "Name",
          "transforms": Array [
            [Function],
          ],
        },
        Object {
          "cellTransforms": Array [
            [Function],
          ],
          "props": Object {},
          "title": "",
          "transforms": undefined,
        },
      ]
    }
    onSort={[Function]}
    rows={Array []}
    sortBy={Object {}}
  >
    <TableHeader />
    <TableBody />
  </Component>
</Fragment>
`;

exports[`Spots page should render the editor correctly 1`] = `
<tr>
  <td
    key="0"
  >
    <ForwardRef
      aria-label="Name"
      defaultValue="Spot 2"
      key="0"
      name="name"
      onChange={[Function]}
    />
  </td>
  <td
    key="1"
  >
    <StatefulMultiTypeaheadSelectInput
      emptyText="Trans(i18nKey=selectRequiredSkills)"
      key="1"
      onChange={[Function]}
      optionToStringMap={[Function]}
      options={
        Array [
          Object {
            "name": "Skill 1",
            "tenantId": 0,
          },
          Object {
            "name": "Skill 2",
            "tenantId": 0,
          },
        ]
      }
      value={
        Array [
          Object {
            "name": "Skill 1",
            "tenantId": 0,
          },
          Object {
            "name": "Skill 2",
            "tenantId": 0,
          },
        ]
      }
    />
  </td>
  <td
    key="2"
  >
    <StatefulTypeaheadSelectInput
      emptyText=""
      key="3"
      onChange={[Function]}
      optionToStringMap={[Function]}
      options={
        Array [
          true,
          false,
        ]
      }
      value={true}
    />
  </td>
</tr>
`;

exports[`Spots page should render the viewer correctly 1`] = `
<tr>
  <td
    key="0"
  >
    <span
      style={
        Object {
          "display": "grid",
          "gridTemplateColumns": "min-content 5px max-content min-content",
        }
      }
    >
      <BiohazardIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
        title={null}
      />
      <span />
      <Text
        key="0"
      >
        Spot 2
      </Text>
      <Component
        onClick={[Function]}
        variant="link"
      >
        <ArrowIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        />
      </Component>
    </span>
  </td>
  <td
    key="1"
  >
    <ChipGroup
      className=""
      collapsedText="\${remaining} more"
      defaultIsOpen={false}
      expandedText="Show Less"
      key="1"
      numChips={3}
      withToolbar={false}
    >
      <Component
        isReadOnly={true}
        key="Skill 1"
      >
        Skill 1
      </Component>
      <Component
        isReadOnly={true}
        key="Skill 2"
      >
        Skill 2
      </Component>
    </ChipGroup>
  </td>
  <td
    key="2"
  >
    <Text
      key="2"
    >
      Yes
    </Text>
  </td>
</tr>
`;
